fit_predictor/cvrp_lehd/evaluates/run9/2025-01-25_19-03-28/problem_iter5_response0.txt_stdout.txt
Traceback (most recent call last):
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo_2\problems\cvrp_lehd\VRPModel.py", line 6, in <module>
    from gpt import heuristics_v2 as heuristics
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo_2\problems\cvrp_lehd\gpt.py", line 35
    smoothed_matrix = torch.nn.functional\u01bd\ufffd\ufffd\ufffd\ufffd(heuristic_matrix)  # Placeholder for smoothing
                                           ^
SyntaxError: (unicode error) 'utf-8' codec can't decode byte 0xbb in position 12: invalid start byte

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo_2/problems/cvrp_lehd/eval.py", line 15, in <module>
    from VRPTester import VRPTester as Tester
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo_2\problems\cvrp_lehd\VRPTester.py", line 4, in <module>
    from VRPModel import VRPModel as Model
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo_2\problems\cvrp_lehd\VRPModel.py", line 8, in <module>
    from gpt import heuristics
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo_2\problems\cvrp_lehd\gpt.py", line 35
    smoothed_matrix = torch.nn.functional\u01bd\ufffd\ufffd\ufffd\ufffd(heuristic_matrix)  # Placeholder for smoothing
                                           ^
SyntaxError: (unicode error) 'utf-8' codec can't decode byte 0xbb in position 12: invalid start byte
